@@ -36,6 +36,12 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class TurMongoChatMemoryStore implements TurChatMemoryStore {
 
+    // --- S1192: extracted duplicated literals ---
+    private static final String MESSAGES = "messages";
+    private static final String CONTENT = "content";
+    private static final String TIMESTAMP = "timestamp";
+
+
     private final MongoClient client;
     private final String databaseName;
     private final String collectionName;
@@ -85,7 +91,7 @@ public class TurMongoChatMemoryStore implements TurChatMemoryStore {
                     Updates.set("lastAssistantMessage", last.assistantMessage()),
                     Updates.inc("turnCount", batch.size()),
                     Updates.pushEach(
-                            "messages",
+                            MESSAGES,
                             messageDocs,
                             new PushOptions().slice(-maxMessages)));
 
@@ -102,23 +108,23 @@ public class TurMongoChatMemoryStore implements TurChatMemoryStore {
     private static Document toMessageDoc(String role, String content, Date ts) {
         return new Document()
                 .append("role", role)
-                .append("content", content == null ? "" : content)
-                .append("timestamp", ts);
+                .append(CONTENT, content == null ? "" : content)
+                .append(TIMESTAMP, ts);
     }
 
     @Override
     public List<Map<String, Object>> findMessages(String conversationId, int limit) {
         if (conversationId == null || conversationId.isBlank()) return List.of();
-        int cap = Math.max(1, Math.min(limit, 1000));
+        int cap = Math.clamp(limit, 1, 1000);
         try {
             Document doc = client.getDatabase(databaseName)
                     .getCollection(collectionName)
                     .find(com.mongodb.client.model.Filters.eq("_id", conversationId))
-                    .projection(new Document("messages", 1))
+                    .projection(new Document(MESSAGES, 1))
                     .first();
             if (doc == null) return List.of();
             @SuppressWarnings("unchecked")
-            List<Document> messages = (List<Document>) doc.get("messages");
+            List<Document> messages = (List<Document>) doc.get(MESSAGES);
             if (messages == null || messages.isEmpty()) return List.of();
             // The capped $push.$slice already keeps only the most-recent entries;
             // here we just take the tail (in chronological order).
@@ -128,9 +134,9 @@ public class TurMongoChatMemoryStore implements TurChatMemoryStore {
                 Document m = messages.get(i);
                 Map<String, Object> row = new LinkedHashMap<>();
                 row.put("role", m.getString("role"));
-                row.put("content", m.getString("content"));
-                Date ts = m.getDate("timestamp");
-                row.put("timestamp", ts == null ? null : ts.toInstant().toString());
+                row.put(CONTENT, m.getString(CONTENT));
+                Date ts = m.getDate(TIMESTAMP);
+                row.put(TIMESTAMP, ts == null ? null : ts.toInstant().toString());
                 result.add(row);
             }
             return result;
